Updated data files
Created data folder, copied in housing_data.js and
lgd_boundaries.geojson

--- a/nihe-stats.htm
+++ b/nihe-stats.htm
@@ -17,7 +17,7 @@
     <script src="//code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
     <script src="http://code.highcharts.com/highcharts.js"></script>
     <script src="http://code.highcharts.com/modules/exporting.js"></script>
-    <script src="housing_data.js"></script>
+    <script src="data/housing_data.js"></script>
 
     <link rel="stylesheet" href="//code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="style.css" />
